win_shell/yaml/virtualservice_for_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway
spec:
  hosts:
  - "*"
  gateways:
  - gateway-gateway
  http:
  - match:
    - uri:
        prefix: /uaa
    route:
    - destination:
        port:
          number: 5000
        host: auth-service.piggymetrics.svc.cluster.local
  - match:
    - uri:
        prefix: /accounts
    route:
    - destination:
        port:
          number: 6000
        host: account-service.piggymetrics.svc.cluster.local
  - match:
    - uri:
        prefix: /statistics
    route:
    - destination:
        port:
          number: 8888
        host: statistics-service.piggymetrics.svc.cluster.local
  - match:
    - uri:
        prefix: /notifications
    route:
    - destination:
        port:
          number: 8000
        host: notification-service.piggymetrics.svc.cluster.local
